--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,15 +1,13 @@
 {
   "dependencies": {
-    "com.unity.dots.editor": "0.8.2-preview",
-    "com.unity.entities": "0.11.2-preview.1",
-    "com.unity.ide.rider": "2.0.7",
-    "com.unity.ide.visualstudio": "2.0.12",
-    "com.unity.ide.vscode": "1.2.4",
-    "com.unity.render-pipelines.universal": "10.6.0",
-    "com.unity.rendering.hybrid": "0.5.2-preview.4",
-    "com.unity.test-framework": "1.1.30",
+    "com.unity.burst": "1.6.6",
+    "com.unity.collections": "1.2.4",
+    "com.unity.ide.visualstudio": "2.0.16",
+    "com.unity.ide.vscode": "1.2.5",
+    "com.unity.render-pipelines.universal": "12.1.6",
+    "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.4.8",
+    "com.unity.timeline": "1.6.4",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
