--- a/ProjectSettings/BurstAotSettings_StandaloneWindows.json
+++ b/ProjectSettings/BurstAotSettings_StandaloneWindows.json
@@ -5,12 +5,13 @@
     "EnableOptimisations": true,
     "EnableSafetyChecks": false,
     "EnableDebugInAllBuilds": false,
+    "UsePlatformSDKLinker": false,
     "CpuMinTargetX32": 0,
     "CpuMaxTargetX32": 0,
     "CpuMinTargetX64": 0,
     "CpuMaxTargetX64": 0,
     "CpuTargetsX32": 6,
     "CpuTargetsX64": 72,
-    "OptimizeFor": 0
+    "OptimizeFor": 1
   }
 }
