Move meshers to correct folder and delete unused meta file

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,9 @@
 # Visual Studio Code cache directory
 .vscode/
 
+# JetBrains Rider cache directory
+.idea/
+
 # Gradle cache directory
 .gradle/
 
